cabal-version:      3.0
name:               ahab
version:            0.1.0.0
-- synopsis:
-- description:
license:            ISC
license-file:       LICENSE
author:             Marco Benelli
maintainer:         mbenelli@fastmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Ahab.Client
      , Ahab.Config
      , Ahab.Server
      , Ahab.Jira.Api
      , Ahab.Jira.CustomTypes
      , Ahab.Jira.Types
      , Ahab.Transform
      , Ahab.Types
      , Ahab.Utils
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1
      , aeson >= 2.2.1 && < 2.3
      , basic-prelude >= 0.7.0 && < 0.8
      , bytestring >= 0.11.5 && < 0.12
      , connection >= 0.3.1 && < 0.4
      , containers
      , data-default >= 0.7.1 && < 0.8
      , directory >= 1.3.7 && < 1.4
      , http-client >= 0.7.16 && < 0.8
      , http-client-tls >= 0.3.6 && < 0.4
      , mtl >= 2.2.2 && < 2.3
      , pretty-simple >= 4.1.2 && < 4.2
      , servant >= 0.20.1 && < 0.21
      , servant-client >= 0.20 && < 0.21
      , servant-server >= 0.20 && < 0.21
      , text >= 2.0.2 && < 2.1
      , time
      , tls >= 1.6.0 && < 1.7
      , unordered-containers >= 0.2.20 && < 0.3
      , warp >= 3.3.31 && < 3.4
      , yaml >= 0.11.11 && < 0.12
    hs-source-dirs:   lib
    default-language: Haskell2010

test-suite ahab-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1
      , aeson >= 2.2.1 && < 2.3
      , ahab
      , bytestring >= 0.11.5 && < 0.12
      , HUnit
      , text >= 2.0.2 && < 2.1
