cabal-version:      3.0
name:               ghidorah
version:            0.1.0.0
-- synopsis:
-- description:
license:            ISC
license-file:       LICENSE
author:             Marco Benelli
maintainer:         mbenelli@fastmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Client, Config, Search, Field
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1
      , aeson
      , connection
      , data-default
      , directory
      , http-client
      , http-client-tls
      , servant
      , servant-client
      , text
      , tls
      , unordered-containers
      , yaml
    hs-source-dirs:   lib
    default-language: Haskell2010

test-suite ghidorah-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1
      , ghidorah
      , HUnit
